--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsc && nodemon api/index.ts",
+    "dev": "nodemon api/index.ts",
     "start": "node api/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
