--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,12 +1,24 @@
 {
+  "ts-node": {
+    "transpileOnly": true
+  },
   "compilerOptions": {
-    "target": "es2016",                           
-    "module": "commonjs",                               
+    /* Language and Environment */
+    "target": "es2016",
+    
+    /* Modules */
+    "module": "commonjs",          
+
+    /* Interop Constraints */
     "esModuleInterop": true,                       
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node10",
+    "allowJs": true,
+    
+    /* Type Checking */
     "strict": true,
-    "skipLibCheck": true,
+    "noEmit": true,
+
+    /* Output */
     "outDir": "../dist"                                /* Skip type checking all .d.ts files. */
   }
 }
