--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "knex": "^3.1.0",
+    "pg": "^8.12.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
